; ModuleID = '/home/carl/AnghaBench/TDengine/src/system/detail/src/extr_vnodeFilterFunc.c_equal_dd.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/system/detail/src/extr_vnodeFilterFunc.c_equal_dd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { double, double }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @equal_dd(%struct.TYPE_5__* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = bitcast i8* %8 to double*
  %10 = load double, double* %9, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = bitcast i8* %11 to double*
  %13 = load double, double* %12, align 8
  %14 = fcmp oeq double %10, %13
  br i1 %14, label %15, label %25

15:                                               ; preds = %3
  %16 = load i8*, i8** %6, align 8
  %17 = bitcast i8* %16 to double*
  %18 = load double, double* %17, align 8
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 0
  %22 = load double, double* %21, align 8
  %23 = fcmp oeq double %18, %22
  %24 = zext i1 %23 to i32
  store i32 %24, i32* %4, align 4
  br label %55

25:                                               ; preds = %3
  %26 = load i8*, i8** %6, align 8
  %27 = bitcast i8* %26 to double*
  %28 = load double, double* %27, align 8
  %29 = load i8*, i8** %7, align 8
  %30 = bitcast i8* %29 to double*
  %31 = load double, double* %30, align 8
  %32 = fcmp olt double %28, %31
  %33 = zext i1 %32 to i32
  %34 = call i32 @assert(i32 %33)
  %35 = load i8*, i8** %6, align 8
  %36 = bitcast i8* %35 to double*
  %37 = load double, double* %36, align 8
  %38 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %39 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %38, i32 0, i32 0
  %40 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %39, i32 0, i32 1
  %41 = load double, double* %40, align 8
  %42 = fcmp ole double %37, %41
  br i1 %42, label %43, label %52

43:                                               ; preds = %25
  %44 = load i8*, i8** %7, align 8
  %45 = bitcast i8* %44 to double*
  %46 = load double, double* %45, align 8
  %47 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %48 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %47, i32 0, i32 0
  %49 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %48, i32 0, i32 1
  %50 = load double, double* %49, align 8
  %51 = fcmp oge double %46, %50
  br label %52

52:                                               ; preds = %43, %25
  %53 = phi i1 [ false, %25 ], [ %51, %43 ]
  %54 = zext i1 %53 to i32
  store i32 %54, i32* %4, align 4
  br label %55

55:                                               ; preds = %52, %15
  %56 = load i32, i32* %4, align 4
  ret i32 %56
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
